--- a/junit5-testing/pom.xml
+++ b/junit5-testing/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>zerocode-tdd-parent</artifactId>
         <groupId>org.jsmart</groupId>
-        <version>1.3.16-SNAPSHOT</version>
+        <version>1.3.16</version>
     </parent>
 
     <artifactId>zerocode-tdd-jupiter</artifactId>
