--- a/http-testing/pom.xml
+++ b/http-testing/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>zerocode-tdd-parent</artifactId>
         <groupId>org.jsmart</groupId>
-        <version>1.3.16</version>
+        <version>1.3.17-SNAPSHOT</version>
     </parent>
 
     <groupId>org.jsmart</groupId>
