--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>zerocode-tdd-parent</artifactId>
         <groupId>org.jsmart</groupId>
-        <version>1.3.17-SNAPSHOT</version>
+        <version>1.3.17</version>
     </parent>
 
     <artifactId>zerocode-tdd</artifactId>
