--- a/zerocode-maven-archetype/pom.xml
+++ b/zerocode-maven-archetype/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jsmart</groupId>
         <artifactId>zerocode-tdd-parent</artifactId>
-        <version>1.3.20</version>
+        <version>1.3.21-SNAPSHOT</version>
     </parent>
     <artifactId>zerocode-maven-archetype</artifactId>
 
